--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -104,7 +104,7 @@
                 Background = "#121212", // Example background color for dark mode
                 TextPrimary = "#ffffff", // Example text color for dark mode
             };
-            // _isDarkMode = await _mudThemeProvider!.GetSystemDarkModeAsync();
+             _isDarkMode = await _mudThemeProvider!.GetSystemDarkModeAsync();
             StateHasChanged();
         }
     }
