--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -47,9 +47,9 @@
             <MudNavMenu Class="mud-width-full">
                 <MudNavLink Href="/" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
                 <MudNavGroup Title="Orders" Icon="@Icons.Material.Filled.Lan">
-                <MudNavLink Href="/page/orders/create" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">New Order</MudNavLink>
-                    <MudNavLink Href="/orders/views/today" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Order Today</MudNavLink>
-                    <MudNavLink Href="/orders/views" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Order History</MudNavLink>
+                    <MudNavLink Href="/page/orders/create" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">New Order</MudNavLink>
+                    <MudNavLink Href="/orders/views/today" Icon="@Icons.Material.Filled.Today" IconColor="Color.Primary">Order Today</MudNavLink>
+                    <MudNavLink Href="/orders/views" Icon="@Icons.Material.Filled.History" IconColor="Color.Info">Order History</MudNavLink>
                 </MudNavGroup>
                 <MudNavGroup Title="Products" Icon="@Icons.Material.Filled.ListAlt">
                     <MudNavLink Href="/products" Icon="@Icons.Material.Filled.ListAlt" IconColor="Color.Success">Product</MudNavLink>
