--- a/MiniShopApp/Pages/Lists/Categories/CreateCategory.razor
+++ b/MiniShopApp/Pages/Lists/Categories/CreateCategory.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <DialogContent>
-        <form>
+        <MudForm>
             <div class="mb-2">
                 <label class="form-label" for="name">Category name</label>
                 <input type="text" id="name" class="form-control" @bind="model.CategoryName" />
@@ -9,7 +9,7 @@
                 <label class="form-label" for="desc">Descriptions</label>
                 <textarea type="text" id="desc" class="form-control" @bind="model.Description" />
             </div>
-        </form>
+        </MudForm>
     </DialogContent>
     <DialogActions>
         <MudButton Variant="Variant.Filled" OnClick="Cancel">Cancel</MudButton>
