--- a/MiniShopApp/Pages/Lists/Categories/UpdateCategory.razor
+++ b/MiniShopApp/Pages/Lists/Categories/UpdateCategory.razor
@@ -1,20 +1,22 @@
 ﻿<MudDialog>
     <DialogContent>
-        <form>
-            <div class="mb-2">
-                <label class="form-label" for="name">Category name</label>
-                <input type="text" id="name" class="form-control" @bind="model.CategoryName" />
-            </div>
-            <div class="mb-2">
-                <label class="form-label" for="desc">Descriptions</label>
-                <textarea type="text" id="desc" class="form-control" @bind="model.Description" />
-            </div>
-        </form>
+        <MudForm @ref="form">
+            <MudTextField @bind-Value="@model.CategoryName"
+                          Label="Category Name"
+                          Required="true"
+                          Variant="Variant.Outlined" />
+            <MudTextField @bind-Value="@model.Description"
+                          Label="Description"
+                          Lines="5"
+                          Variant="Variant.Outlined" />
+        </MudForm>
     </DialogContent>
     <DialogActions>
         <MudButton Variant="Variant.Filled" OnClick="Cancel">Cancel</MudButton>
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="SaveUpdate">Save</MudButton>
     </DialogActions>
 </MudDialog>
-
+@code{
+    MudForm form;
+}
 
