--- a/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
@@ -1,26 +1,21 @@
-﻿@page "/table/create"
-
-@* <div class="d-flex justify-content-end"> *@
-@*     <button class="btn btn-primary" onclick="@SaveTable">Save</button> *@
-@*     <button class="btn btn-danger">Cancel</button> *@
-@* </div> *@
-
-
-<MudDialog>
+﻿<MudDialog>
     <DialogContent>
-        <form>
-            <div class="mb-2">
-                <label class="form-label" for="name">Table Code</label>
-                <input type="text" id="name" class="form-control" @bind="model.TableNumber" />
-            </div>
-            <div class="mb-2">
-                <label class="form-label" for="desc">Descriptions</label>
-                <textarea type="text" id="desc" class="form-control" @bind="model.Description" />
-            </div>
-        </form>
+        <MudForm @ref="form">
+            <MudTextField @bind-Value="@model.TableNumber"
+                          Label="Table Name"
+                          Required="true"
+                          Variant="Variant.Outlined" />
+            <MudTextField @bind-Value="@model.Description"
+                          Label="Description"
+                          Lines="5"
+                          Variant="Variant.Outlined" />
+        </MudForm>
     </DialogContent>
     <DialogActions>
         <MudButton Variant="Variant.Filled" OnClick="Cancel">Cancel</MudButton>
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="SaveTable">Save</MudButton>
     </DialogActions>
 </MudDialog>
+@code{
+    MudForm form;
+}
