--- a/MiniShopApp/Pages/Orders/WebOrders/OrderPage.razor
+++ b/MiniShopApp/Pages/Orders/WebOrders/OrderPage.razor
@@ -203,7 +203,7 @@
                                    >Clear</MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Primary"
                                    StartIcon="@Icons.Material.Filled.AddCircleOutline"
-                                   ButtonType="ButtonType.Submit"
+                                   ButtonType="ButtonType.Button"
                                    OnClick="HandleValidSubmit">Confirm Order</MudButton>
                     </MudStack>
                 </MudForm>
