--- a/MiniShopApp/Pages/Orders/OrderViewToday.razor
+++ b/MiniShopApp/Pages/Orders/OrderViewToday.razor
@@ -224,8 +224,15 @@
             <MudTextField T="string" ValueChanged="@(s => OnSearch(s))" Placeholder="Search" Variant=Variant.Text Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="my-2"></MudTextField>
         </MudStack>
+@*         <DropdownActionOrder ExpandedAction="_expandedEdit"
+                             ItemCount="@selectedYesterdayOrders.Count"
+                             ClickPrint="@(() => GenerateReceiptAsync(selectedYesterdayOrders))" /> *@
         <DropdownActionOrder ExpandedAction="_expandedEdit"
                              ItemCount="@selectedYesterdayOrders.Count"
+                             DisabledPaid=false
+                             DisabledCancel=false
+                             ClickModifyPaid="@(() => ConfirmPaidBulk(selectedYesterdayOrders))"
+                             ClickModifyCancel="@(() => ConfirmCancelBulk(selectedYesterdayOrders))"
                              ClickPrint="@(() => GenerateReceiptAsync(selectedYesterdayOrders))" />
         <MudTable ServerData="ServerReload"
                   FixedHeader="@fixed_header"
@@ -243,12 +250,12 @@
                     </MudTableSortLabel>
                 </MudTh>
                 <MudTh>
-                    <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
-                        Customer Id
+                    <MudTableSortLabel SortLabel="OrderCode" T="ViewTbOrders">
+                        Order #
                     </MudTableSortLabel>
                 </MudTh>
                 <MudTh>
-                    <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                    <MudTableSortLabel SortLabel="FirstName" T="ViewTbOrders">
                         Customer
                     </MudTableSortLabel>
                 </MudTh>
@@ -257,21 +264,44 @@
                 <MudTh>Price</MudTh>
                 <MudTh>Discount</MudTh>
                 <MudTh>
-                    <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                    <MudTableSortLabel SortLabel="TotalPrice" T="ViewTbOrders">
                         Total
+                    </MudTableSortLabel>
+                </MudTh>
+                <MudTh>
+                    <MudTableSortLabel SortLabel="OrderStatus" T="ViewTbOrders">
+                        Status
                     </MudTableSortLabel>
                 </MudTh>
 
             </HeaderContent>
             <RowTemplate>
                 <MudTd @key="context.Id" DataLabel="Order ID"><MudIcon Icon="@Icons.Material.Filled.ArrowDropDown" /> @context.CreatedDT?.ToString("dd/MMM/yy")</MudTd>
-                <MudTd DataLabel="CustomerId">@context.CustomerId</MudTd>
+                <MudTd DataLabel="OrderCode">@context.OrderCode</MudTd>
                 <MudTd DataLabel="FirstName">@(context.FirstName ?? context.CustomerType)</MudTd>
                 <MudTd DataLabel="TableNumber">@context.TableNumber</MudTd>
                 <MudTd DataLabel="ItemCount">@context.ItemCount</MudTd>
                 <MudTd DataLabel="SubPrice">@context.SubPrice?.ToString("c2")</MudTd>
                 <MudTd DataLabel="DiscountPrice">@context.DiscountPrice?.ToString("P0")</MudTd>
                 <MudTd DataLabel="TotalPrice">@context.TotalPrice?.ToString("c2")</MudTd>
+                <MudTd DataLabel="OrderStatus">
+                    @if (context.OrderStatus == Statuses.Paid.ToString())
+                    {
+                        <MudText Typo="Typo.subtitle2" Color="Color.Success">@context.OrderStatus</MudText>
+
+                    }
+                    else if (context.OrderStatus == Statuses.Canceled.ToString())
+                    {
+                        <MudText Typo="Typo.subtitle2" Color="Color.Info">@context.OrderStatus</MudText>
+
+                    }
+                    else
+                    {
+                        <MudText Typo="Typo.subtitle2" Color="Color.Secondary">@context.OrderStatus</MudText>
+
+                    }
+
+                </MudTd>
 
             </RowTemplate>
 
